--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-# idk what this is supposed to be but I will figure it out later. Ignore important files for security reasons etc.
+# Ignore important files for security / cleanliness reasons etc.
 
 .DS_store
